# intelligentHome

./: .gitignore  CMakeLists.txt  README.md
LED_Light_Strip_Demo/: LED_Light_Strip_Demo.ino
applications/: CMakeLists.txt
applications/src/: deviceswidget.cpp  mainwindow.cpp  mainwindow.ui
configuration/: qtconfig.cmake
core/: CMakeLists.txt
core/networkdiscovery/: CMakeLists.txt
core/networkdiscovery/example/: networkdiscovery_example.cpp  networkdiscovery_tool.cpp
core/networkdiscovery/inc/: networkdiscovery.h
core/networkdiscovery/src/: discovered_endpoint.hpp  endpoint.cpp  endpoint.hpp  endpoint_parameters.hpp  ip_port.cpp  ip_port.hpp  networkdiscovery.cpp  protocol.cpp  protocol.hpp
core/socketcommunication/: CMakeLists.txt
core/socketcommunication/inc/: packettypes.h  socket.h  socketpacket.h
core/socketcommunication/src/: ipendpoint.cpp  ipendpoint.h  socket.cpp  socketpacket.cpp
frontend/: CMakeLists.txt
frontend/main/: main.cpp
frontend/resources/: intelligenthome.qrc
frontend/src/: deviceswidget.cpp  deviceswidget.cpp.autosave  deviceswidget.h  deviceswidget.ui  discoverdeviceswidget.cpp  discoverdeviceswidget.cpp.autosave  discoverdeviceswidget.h  discoverdeviceswidget.h.autosave  discoverdeviceswidget.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  menuwidget.ui
